Login page alignment issues fixed
Login page alignment issues fixed

--- a/themes/bartik/css/layout.css
+++ b/themes/bartik/css/layout.css
@@ -1693,4 +1693,5 @@ div.field-name-field-upload-file-roadmap .form-managed-file input[value='Remove'
 .view-e-catalogs-view .marker{color: red;font-size: 30px;text-transform:uppercase;}
 .view-e-catalogs-view .btn{cursor:default;margin: 0px 5px 0 10px;padding: 0px;}
 .view-e-catalogs-view .views-field-edit-node,.view-e-catalogs-view .views-field-delete-node{float:left;margin:30px 0px 0px;}
-.page-node .group-page-us-content .field-name-body{width:1000px;margin:0px auto;}
+/* .page-node .group-page-us-content .field-name-body{width:1000px;margin:0px auto;} */
+.page-testimonial h1.title{width:1000px;margin:0px auto;padding:30px 0px;}
